1. 계산식 수정 2. csv 덮어쓰기 에러 수정

--- a/EbestTradeBot_V1/EbestTradeBot_V2/App.xaml
+++ b/EbestTradeBot_V1/EbestTradeBot_V2/App.xaml
@@ -4,6 +4,11 @@
              xmlns:local="clr-namespace:EbestTradeBot_V2"
              xmlns:prism="http://prismlibrary.com/" >
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </prism:PrismApplication>
