--- a/EbestTradeBot_V1/EbestTradeBot_V2/Views/MainWindow.xaml
+++ b/EbestTradeBot_V1/EbestTradeBot_V2/Views/MainWindow.xaml
@@ -1,10 +1,54 @@
-﻿<Window x:Class="EbestTradeBot_V2.Views.MainWindow"
+﻿<mah:MetroWindow x:Class="EbestTradeBot_V2.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:EbestTradeBot_V2"
+        mc:Ignorable="d"
         xmlns:prism="http://prismlibrary.com/"
+        xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+        xmlns:iconPack="http://metro.mahapps.com/winfx/xaml/iconpacks"
+        xmlns:viewModels="clr-namespace:EbestTradeBot_V2.ViewModels"
+        d:DataContext="{d:DesignInstance Type=viewModels:MainWindowViewModel}"
         prism:ViewModelLocator.AutoWireViewModel="True"
-        Title="{Binding Title}" Height="350" Width="525" >
-    <Grid>
-        <ContentControl prism:RegionManager.RegionName="ContentRegion" />
-    </Grid>
-</Window>
+        ResizeMode="NoResize"
+        Title="EbestTradeBot" Height="450" Width="800">
+    <mah:MetroWindow.Resources>
+        <Style x:Key="ButtonBackgroundByRun" TargetType="Button" BasedOn="{StaticResource MahApps.Styles.Button}">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding IsRun}" Value="True">
+                    <Setter Property="Background" Value="Green"/>
+                </DataTrigger>
+                <DataTrigger Binding="{Binding IsRun}" Value="False">
+                    <Setter Property="Background" Value="Red"/>
+                </DataTrigger>
+            </Style.Triggers>
+            <Setter Property="FontSize" Value="13"/>
+        </Style>
+    </mah:MetroWindow.Resources>
+    <DockPanel Margin="2.5">
+        <Menu DockPanel.Dock="Top" Margin="2.5">
+            <MenuItem Header="도구" FontSize="12">
+                <MenuItem Header="옵션" Click="Cofiguration_Clicked">
+                    <MenuItem.Icon>
+                        <iconPack:PackIconMaterial Kind="Cog"/>
+                    </MenuItem.Icon>
+                </MenuItem>
+            </MenuItem>
+        </Menu>
+        <StackPanel Orientation="Vertical" Margin="2.5">
+            <Button Content="매매버튼 (진행시 초록색, 대기중 빨간색)" VerticalAlignment="Center" Margin="2.5"
+                    Style="{StaticResource ButtonBackgroundByRun}"
+                    Command="{Binding RunCommand}"/>
+            <TextBox 
+                VerticalScrollBarVisibility="Auto"
+                AcceptsReturn="True"
+                TextWrapping="Wrap"
+                IsReadOnly="True"
+                Margin="2.5"
+                Height="330"
+                Text="{Binding Board}"
+            />
+        </StackPanel>
+    </DockPanel>
+</mah:MetroWindow>
