2차매수 구현 및 테스트 진행중 시간 함수 TimeSpan 비교방식으로 변경 2차매수 여부 Configuration 체크박스 및 기능 추가

--- a/EbestTradeBot_V1/EbestTradeBot_V1/Views/ConfigurationWindow.xaml
+++ b/EbestTradeBot_V1/EbestTradeBot_V1/Views/ConfigurationWindow.xaml
@@ -88,6 +88,8 @@
             </StackPanel>
         </GroupBox>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="2.5">
+            <CheckBox Content="2차매수" Margin="2.5" VerticalAlignment="Center"
+                      IsChecked="{Binding IsSecondTrade}"/>
             <CheckBox Content="모의투자" Margin="2.5" VerticalAlignment="Center"
                       IsChecked="{Binding IsTestTrade}"/>
             <Button x:Name="OkButton" Content="확인" VerticalAlignment="Center" Margin="2.5"
